[metadata]
name = autocron
version = attr:autocron.__version__
url = https://github.com/kbr/autocron
project_urls =
    Homepage = https://github.com/kbr/autocron
    Code = https://github.com/kbr/autocron
    Issue tracker = https://github.com/kbr/autocron/issues
description = Background task runner for Python 3 with no dependencies
long_description = file: README.rst
long_description_content_type= text/x-rst
license = MIT
license_file = LICENSE
author = Klaus Bremer
author_email = bremer@bremer-media.com
platform = any
keywords = background tasks, django
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
packages = autocron

[options.entry_points]
console_scripts =
    autocron = autocron.admin:main
