[metadata]
name = autocron
version = attr:autocron.__version__
url = https://github.com/kbr/autocron
project_urls =
    Homepage = https://github.com/kbr/autocron
    Code = https://github.com/kbr/autocron
    Issue tracker = https://github.com/kbr/autocron/issues
description = Asynchronous background tasks for Python web-frameworks with no dependencies
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
author = Klaus Bremer
author_email = bremer@bremer-media.com
platform = any
keywords = background task, web-framework, django, flask, pyramid, bottle, tornado, starlette
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
packages = autocron

[options.entry_points]
console_scripts =
    autocron = autocron.admin:main
